foreign: Remove type_info from foreign APIs

If we don't require a type_info in a foreign API, this will make it easier
to use the foreign API from another place in the code. Swap out the use
of type_info with the interface info that the type info contains.

https://bugzilla.gnome.org/show_bug.cgi?id=671687